// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitlePanel props should match the snapshot 1`] = `
Object {
  "author": "5d5c4546a6bab91d887207c7",
  "favorites": 224,
  "tags": Array [
    "non eiusmod",
    "cupidatat sit",
    "ex",
    "sint",
    "in",
  ],
  "title": "est tempor do anim irure culpa voluptate laboris",
}
`;

exports[`TitlePanel should match the snapshot 1`] = `
.c4 {
  font-weight: 500;
  font-size: 1rem;
}

.c4 a:link {
  color: #4472ca;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:visited {
  color: #9999ca;
}

.c4 a:hover {
  color: #9999ca;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  color: black;
  display: inline;
  line-height: 1.5rem;
}

.c5 {
  display: inline-block;
  color: #d1b03b;
  cursor: pointer;
}

.c2 {
  font-weight: 500;
}

.c2 > span {
  color: #636363;
}

.c2 a {
  font-weight: 400;
  color: #636363;
}

.c2 a:link {
  color: #636363;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:visited {
  color: #9c9c9c;
}

.c2 a:hover {
  color: #9c9c9c;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  text-transform: uppercase;
  font-weight: 500;
  color: #4472ca;
  font-size: 1.125rem;
}

.c0 {
  margin: 0 0.4rem;
}

<TitlePanel
  author="5d5c4546a6bab91d887207c7"
  favorites={224}
  tags={
    Array [
      "non eiusmod",
      "cupidatat sit",
      "ex",
      "sint",
      "in",
    ]
  }
  title="est tempor do anim irure culpa voluptate laboris"
>
  <styled.div>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bZQynM",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  margin: 0 0.4rem;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bZQynM",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-EHOje",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  text-transform: uppercase;
  font-weight: 500;
  color: #4472ca;
  font-size: 1.125rem;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-EHOje",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              est tempor do anim irure culpa voluptate laboris
            </div>
          </StyledComponent>
        </styled.div>
        <styled.div
          id="tags"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-ifAKCX",
                  "isStatic": true,
                  "lastClassName": "c2",
                  "rules": Array [
                    "
  font-weight: 500;
  & > span {
    color: #636363;
  }
  a {
    font-weight: 400;
    color: #636363;
  }

  a:link {
    color: #636363;
    text-decoration: none;
  }
  a:visited {
    color: #9c9c9c;
  }
  a:hover {
    color: #9c9c9c;
    text-decoration: underline;
  }
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-ifAKCX",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            id="tags"
          >
            <div
              className="c2"
              id="tags"
            >
              Tags: 
              <a
                href="/tag/non eiusmod"
              >
                non eiusmod
              </a>
              <span>
                , 
              </span>
              <a
                href="/tag/cupidatat sit"
              >
                cupidatat sit
              </a>
              <span>
                , 
              </span>
              <a
                href="/tag/ex"
              >
                ex
              </a>
              <span>
                , 
              </span>
              <a
                href="/tag/sint"
              >
                sint
              </a>
              <span>
                , 
              </span>
              <a
                href="/tag/in"
              >
                in
              </a>
            </div>
          </StyledComponent>
        </styled.div>
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bwzfXH",
                  "isStatic": true,
                  "lastClassName": "c3",
                  "rules": Array [
                    "
  display: flex;
  justify-content: space-between;
",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bwzfXH",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c3"
            >
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": true,
                        "lastClassName": "c4",
                        "rules": Array [
                          "
  font-weight: 500;
  font-size: 1rem;
  a:link {
    color: #4472ca;
    text-decoration: none;
  }
  a:visited {
    color: #9999ca;
  }
  a:hover {
    color: #9999ca;
    text-decoration: underline;
  }
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c4"
                  >
                    By: 
                    <a
                      href="/user/5d5c4546a6bab91d887207c7"
                    >
                      5d5c4546a6bab91d887207c7
                    </a>
                  </div>
                </StyledComponent>
              </styled.div>
              <styled.div
                iconColor="#d1b03b"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bxivhb",
                        "isStatic": false,
                        "lastClassName": "c5",
                        "rules": Array [
                          "
  display: inline-block;
  width: ",
                          [Function],
                          ";
  border-right: ",
                          [Function],
                          ";
  border-left: ",
                          [Function],
                          ";
  color: ",
                          [Function],
                          ";
  font-size: ",
                          [Function],
                          ";
  transform: ",
                          [Function],
                          ";
  cursor: pointer;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bxivhb",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  iconColor="#d1b03b"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <div
                    className="c5"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex="0"
                    type="button"
                  >
                    <styled.div>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-htpNat",
                              "isStatic": true,
                              "lastClassName": "c6",
                              "rules": Array [
                                "
  color: black;
  display: inline;
  line-height: 1.5rem;
",
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-htpNat",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c6"
                        >
                          224
                        </div>
                      </StyledComponent>
                    </styled.div>
                    <i
                      className="icon-star-empty"
                    />
                  </div>
                </StyledComponent>
              </styled.div>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </styled.div>
</TitlePanel>
`;

exports[`TitlePanel should toggle 'icon-star' class to 'icon-star-empty' after click on star button 1`] = `
Object {
  "className": "icon-star-empty",
}
`;

exports[`TitlePanel should toggle 'icon-star-empty' class to 'icon-star' after click on star button 1`] = `
Object {
  "className": "icon-star",
}
`;
